--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,15 @@
 {
   "name": "Guardians of Drum Beat",
   "short_name": "GoDB",
-  "id": "com.godb.drumbeat",
-  "description": "Real-time drum tempo monitoring app with advanced pattern matching",
+  "description": "Real-time drum tempo monitoring app with advanced pattern matching for ensemble performance",
   "start_url": "/",
   "display": "standalone",
+  "orientation": "portrait",
   "theme_color": "#0891b2",
   "background_color": "#111827",
+  "scope": "/",
+  "lang": "en",
+  "categories": ["music", "utilities"],
   "icons": [
     {
       "src": "icon-72.png",
@@ -27,8 +30,32 @@
       "purpose": "any maskable"
     },
     {
+      "src": "icon-144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icon-152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icon-180.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
       "src": "icon-192.png",
       "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icon-384.png",
+      "sizes": "384x384",
       "type": "image/png",
       "purpose": "any maskable"
     },
